Source/Magick.NET.Native/Settings/MagickSettings.h

MAGICK_NET_EXPORT ImageInfo *MagickSettings_Create(void);
MAGICK_NET_EXPORT void MagickSettings_Dispose(ImageInfo *);
MAGICK_NET_EXPORT PixelInfo *MagickSettings_BackgroundColor_Get(const ImageInfo *);
MAGICK_NET_EXPORT void MagickSettings_BackgroundColor_Set(ImageInfo *, const  PixelInfo *);
MAGICK_NET_EXPORT size_t MagickSettings_ColorSpace_Get(const ImageInfo *);
MAGICK_NET_EXPORT void MagickSettings_ColorSpace_Set(ImageInfo *, const size_t value);
MAGICK_NET_EXPORT size_t MagickSettings_ColorType_Get(const ImageInfo *);
MAGICK_NET_EXPORT void MagickSettings_ColorType_Set(ImageInfo *, const size_t value);
MAGICK_NET_EXPORT size_t MagickSettings_Compression_Get(const ImageInfo *);
MAGICK_NET_EXPORT void MagickSettings_Compression_Set(ImageInfo *, const size_t);
MAGICK_NET_EXPORT void MagickSettings_SetNumberScenes(ImageInfo *, const size_t);
MAGICK_NET_EXPORT void MagickSettings_SetOption(ImageInfo *, const char *, const char *);
MAGICK_NET_EXPORT void MagickSettings_SetPage(ImageInfo *, const char *);
MAGICK_NET_EXPORT void MagickSettings_SetPing(ImageInfo *, const MagickBooleanType);
MAGICK_NET_EXPORT void MagickSettings_SetQuality(ImageInfo *, const size_t);
MAGICK_NET_EXPORT void MagickSettings_SetScenes(ImageInfo *, const char *);
MAGICK_NET_EXPORT void MagickSettings_SetScene(ImageInfo *, const size_t);
MAGICK_NET_EXPORT void MagickSettings_SetSize(ImageInfo *, const char *);