src/Magick.NET/Native/Settings/MagickSettings.cs

            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetNumberScenes(IntPtr Instance, UIntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetOption(IntPtr Instance, IntPtr key, IntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetPage(IntPtr Instance, IntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetPing(IntPtr Instance, [MarshalAs(UnmanagedType.Bool)] bool value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetQuality(IntPtr Instance, UIntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetScenes(IntPtr Instance, IntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetScene(IntPtr Instance, UIntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetSize(IntPtr Instance, IntPtr value);
        }
        #endif
    }
    private unsafe sealed partial class NativeMagickSettings : NativeInstance
    {
        static NativeMagickSettings() { Environment.Initialize(); }
        protected override void Dispose(IntPtr instance)
        {
            #if PLATFORM_AnyCPU
            if (Runtime.IsArm64)
            #endif
            #if PLATFORM_arm64 || PLATFORM_AnyCPU
            NativeMethods.ARM64.MagickSettings_Dispose(instance);
            #endif
            #if PLATFORM_AnyCPU
            else if (Runtime.Is64Bit)
            #endif
            #if PLATFORM_x64 || PLATFORM_AnyCPU
            NativeMethods.X64.MagickSettings_Dispose(instance);
            #endif
            #if PLATFORM_AnyCPU
            else
            #endif
            #if PLATFORM_x86 || PLATFORM_AnyCPU
            NativeMethods.X86.MagickSettings_Dispose(instance);
            #endif
        }
        public NativeMagickSettings()
        {
            #if PLATFORM_AnyCPU
            if (Runtime.IsArm64)
            #endif
            #if PLATFORM_arm64 || PLATFORM_AnyCPU
            Instance = NativeMethods.ARM64.MagickSettings_Create();
            #endif
            #if PLATFORM_AnyCPU
            else if (Runtime.Is64Bit)
            #endif
            #if PLATFORM_x64 || PLATFORM_AnyCPU
            Instance = NativeMethods.X64.MagickSettings_Create();
            #endif
            #if PLATFORM_AnyCPU
            else
            #endif
            #if PLATFORM_x86 || PLATFORM_AnyCPU
            Instance = NativeMethods.X86.MagickSettings_Create();
            #endif
            if (Instance == IntPtr.Zero)
                throw new InvalidOperationException();
        }
        protected override string TypeName
        {
            get
            {
                return nameof(MagickSettings);
            }
        }
        public bool AntiAlias
        {
            get
            {
                bool result;
                #if PLATFORM_AnyCPU
                if (Runtime.IsArm64)
                #endif
                #if PLATFORM_arm64 || PLATFORM_AnyCPU
                result = NativeMethods.ARM64.MagickSettings_AntiAlias_Get(Instance);
                #endif
                #if PLATFORM_AnyCPU
                else if (Runtime.Is64Bit)
                #endif
                #if PLATFORM_x64 || PLATFORM_AnyCPU
                result = NativeMethods.X64.MagickSettings_AntiAlias_Get(Instance);
                #endif
                #if PLATFORM_AnyCPU
                else
                #endif
                #if PLATFORM_x86 || PLATFORM_AnyCPU
                result = NativeMethods.X86.MagickSettings_AntiAlias_Get(Instance);
                #endif
                return result;
            }
            set
            {
                #if PLATFORM_AnyCPU
                if (Runtime.IsArm64)
                #endif
                #if PLATFORM_arm64 || PLATFORM_AnyCPU
                NativeMethods.ARM64.MagickSettings_AntiAlias_Set(Instance, value);
                #endif
                #if PLATFORM_AnyCPU
                else if (Runtime.Is64Bit)
                #endif
                #if PLATFORM_x64 || PLATFORM_AnyCPU
                NativeMethods.X64.MagickSettings_AntiAlias_Set(Instance, value);
                #endif
                #if PLATFORM_AnyCPU
                else
                #endif
                #if PLATFORM_x86 || PLATFORM_AnyCPU
                NativeMethods.X86.MagickSettings_AntiAlias_Set(Instance, value);
                #endif
            }
        }
        public IMagickColor<QuantumType>? BackgroundColor
        {
            get
            {
                IntPtr result;
                #if PLATFORM_AnyCPU
                if (Runtime.IsArm64)
                #endif
                #if PLATFORM_arm64 || PLATFORM_AnyCPU
                result = NativeMethods.ARM64.MagickSettings_BackgroundColor_Get(Instance);
                #endif
                #if PLATFORM_AnyCPU
                else if (Runtime.Is64Bit)
                #endif
                #if PLATFORM_x64 || PLATFORM_AnyCPU
                result = NativeMethods.X64.MagickSettings_BackgroundColor_Get(Instance);
                #endif
                #if PLATFORM_AnyCPU
                else
                #endif
                #if PLATFORM_x86 || PLATFORM_AnyCPU
                result = NativeMethods.X86.MagickSettings_BackgroundColor_Get(Instance);
                #endif
                return MagickColor.CreateInstance(result);
            }
            set
            {
                using var valueNative = MagickColor.CreateInstance(value);
                #if PLATFORM_AnyCPU
                if (Runtime.IsArm64)
                #endif
                #if PLATFORM_arm64 || PLATFORM_AnyCPU
                NativeMethods.ARM64.MagickSettings_BackgroundColor_Set(Instance, valueNative.Instance);
                #endif
                #if PLATFORM_AnyCPU
                else if (Runtime.Is64Bit)
                #endif
                #if PLATFORM_x64 || PLATFORM_AnyCPU
                NativeMethods.X64.MagickSettings_BackgroundColor_Set(Instance, valueNative.Instance);
                #endif
                #if PLATFORM_AnyCPU
                else
                #endif
                #if PLATFORM_x86 || PLATFORM_AnyCPU
                NativeMethods.X86.MagickSettings_BackgroundColor_Set(Instance, valueNative.Instance);
                #endif
            }
        }
        public ColorSpace ColorSpace
        {
            get
            {
                UIntPtr result;
                #if PLATFORM_AnyCPU
                if (Runtime.IsArm64)
                #endif
                #if PLATFORM_arm64 || PLATFORM_AnyCPU
                result = NativeMethods.ARM64.MagickSettings_ColorSpace_Get(Instance);
                #endif
                #if PLATFORM_AnyCPU
                else if (Runtime.Is64Bit)
                #endif
                #if PLATFORM_x64 || PLATFORM_AnyCPU
                result = NativeMethods.X64.MagickSettings_ColorSpace_Get(Instance);
                #endif
                #if PLATFORM_AnyCPU
                else
                #endif
                #if PLATFORM_x86 || PLATFORM_AnyCPU
                result = NativeMethods.X86.MagickSettings_ColorSpace_Get(Instance);
                #endif
                return (ColorSpace)result;
            }
            set
            {
                #if PLATFORM_AnyCPU
                if (Runtime.IsArm64)
                #endif
                #if PLATFORM_arm64 || PLATFORM_AnyCPU
                NativeMethods.ARM64.MagickSettings_ColorSpace_Set(Instance, (UIntPtr)value);
                #endif
                #if PLATFORM_AnyCPU
                else if (Runtime.Is64Bit)
                #endif
                #if PLATFORM_x64 || PLATFORM_AnyCPU
                NativeMethods.X64.MagickSettings_ColorSpace_Set(Instance, (UIntPtr)value);
                #endif
                #if PLATFORM_AnyCPU
                else
                #endif
                #if PLATFORM_x86 || PLATFORM_AnyCPU
                NativeMethods.X86.MagickSettings_ColorSpace_Set(Instance, (UIntPtr)value);
                #endif
            }
        }
        public ColorType ColorType
        {
            get
            {
                UIntPtr result;
                #if PLATFORM_AnyCPU
                if (Runtime.IsArm64)
                #endif
                #if PLATFORM_arm64 || PLATFORM_AnyCPU
                result = NativeMethods.ARM64.MagickSettings_ColorType_Get(Instance);
                #endif
                #if PLATFORM_AnyCPU
                else if (Runtime.Is64Bit)
                #endif
                #if PLATFORM_x64 || PLATFORM_AnyCPU
                result = NativeMethods.X64.MagickSettings_ColorType_Get(Instance);
                #endif
                #if PLATFORM_AnyCPU
                else
                #endif
                #if PLATFORM_x86 || PLATFORM_AnyCPU
                result = NativeMethods.X86.MagickSettings_ColorType_Get(Instance);
                #endif
                return (ColorType)result;
            }
            set
            {
                #if PLATFORM_AnyCPU
                if (Runtime.IsArm64)
                #endif
                #if PLATFORM_arm64 || PLATFORM_AnyCPU
                NativeMethods.ARM64.MagickSettings_ColorType_Set(Instance, (UIntPtr)value);
                #endif
                #if PLATFORM_AnyCPU
                else if (Runtime.Is64Bit)
                #endif
                #if PLATFORM_x64 || PLATFORM_AnyCPU
                NativeMethods.X64.MagickSettings_ColorType_Set(Instance, (UIntPtr)value);
                #endif
                #if PLATFORM_AnyCPU
                else
                #endif
                #if PLATFORM_x86 || PLATFORM_AnyCPU
                NativeMethods.X86.MagickSettings_ColorType_Set(Instance, (UIntPtr)value);
                #endif
            }
        }
        public CompressionMethod Compression
        {
            get
            {
                UIntPtr result;
                #if PLATFORM_AnyCPU
                if (Runtime.IsArm64)
                #endif
                #if PLATFORM_arm64 || PLATFORM_AnyCPU
                result = NativeMethods.ARM64.MagickSettings_Compression_Get(Instance);
                #endif
                #if PLATFORM_AnyCPU
                else if (Runtime.Is64Bit)
                #endif
                #if PLATFORM_x64 || PLATFORM_AnyCPU
                result = NativeMethods.X64.MagickSettings_Compression_Get(Instance);
                #endif
                #if PLATFORM_AnyCPU
                else
                #endif
                #if PLATFORM_x86 || PLATFORM_AnyCPU
                result = NativeMethods.X86.MagickSettings_Compression_Get(Instance);
                #endif
                return (CompressionMethod)result;
            }
            set
            {
                #if PLATFORM_AnyCPU
                if (Runtime.IsArm64)
                #endif
                #if PLATFORM_arm64 || PLATFORM_AnyCPU
                NativeMethods.ARM64.MagickSettings_Compression_Set(Instance, (UIntPtr)value);
                #endif
                #if PLATFORM_AnyCPU
                else if (Runtime.Is64Bit)
                #endif
                #if PLATFORM_x64 || PLATFORM_AnyCPU
                NativeMethods.X64.MagickSettings_Compression_Set(Instance, (UIntPtr)value);
